# fountain

./: Cargo.toml  Dockerfile  README.md  build.sh  compile.sh
.github/workflows/: release.yml
script/: build.sh  common.sh  nginx.decode-camera-web.conf  run-decode-camera-web.sh  test.sh
script/rust/: compile.sh  test.sh
src/: chunk.rs  decode.rs  encode.rs  lib.rs  main.rs  qr.rs  terminal.rs  wasm.rs
tests/: integration_test.rs
www/: index.html  main.js
