[package]
name = "cube"
version = "0.1.0"
edition = "2021"
description = "Convert any file to QR codes and back"
license = "Apache-2.0"


[dependencies]
qrcode = "0.14"
image = "0.25"
rqrr = "0.8"
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
ctrlc = "3.4"
terminal_size = "0.4"
opencv = "0.98.1"
